--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body class="mat-typography" style="overflow: hidden;">
   <app-root></app-root>
 </body>
-  <!-- <script src="/__/firebase/8.2.1/firebase-app.js"></script>
+  <script src="/__/firebase/8.2.1/firebase-app.js"></script>
   <script src="/__/firebase/8.2.1/firebase-analytics.js"></script>
-  <script src="/__/firebase/init.js"></script> -->
+  <script src="/__/firebase/init.js"></script>
 </html>
