--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="height: 100%;">
 <head>
   <meta charset="utf-8">
   <title>Tic-Tac-Toe</title>
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="mat-typography" style="overflow: hidden;">
+<body class="mat-typography" style="overflow: hidden; height: 100%; margin: 0;">
   <app-root></app-root>
 </body>
   <!-- <script src="/__/firebase/8.2.1/firebase-app.js"></script>
